--- a/play/mini/mini_bored.html
+++ b/play/mini/mini_bored.html
@@ -10,7 +10,7 @@
 		<span style="color:#dd3939">meh:</span>
 
 		All neighbors are like me. (Also, meh if I've got no neighbors.)
-        &&
+        && gite
 		Either I have no neighbors, or all of my neighbors are like me. Meh.
 
 	</div>
